# preference-clustering

./: .gitignore  README.md  build.sh  experiment.makefile  setup-experiment.sh
hs_gen/: CMakeLists.txt  README.md  README.txt  SM.sets  SetMinimizer.cpp  arrang.cpp  contained.cpp  maxCL.h  test_inst.txt
pref-polys/: Cargo.toml  README.md
pref-polys/resources/: error_paths.txt  error_prefs.txt  lp_only_test_graph  simple_pref_cover_test  simple_pref_cover_test_2
pref-polys/src/: geom.rs  lib.rs  lp.rs  preference.rs  utils.rs
pref-polys/src/graph/: edge.rs  mod.rs  path.rs
pref-polys/src/graph/dijkstra/: mod.rs  ndijkstra.rs  state.rs
pref-polys/src/lp/: preference.rs  size_approx.rs
pref-polys/src/utils/: bitset.rs  io.rs  matrix.rs  metrics.rs  mytypes.rs
solve_hs/: Makefile  README.txt  greedy-solver.cpp  naive-greedy-solver.cpp  print-ilp.cpp
