[package]
name = "pref-polys"
version = "0.1.0"
authors = ["Florian Barth", "Claudius Proissl"]
edition = "2018"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "1.0.2"
serde_json = "1.*"
serde = {version = "1.*", features = ["derive"]}
structopt = "^0.3"
rand = "^0.7"
glpk-sys = "^0.2"
approx = "0.4.0"
itertools = "0.10.0"
priority-queue = "^1.0.5"
metered = "0.7.0"
lazy_static = "1.4.0"
parking_lot = { version = "0.11.1", features = ["serde"] }
anyhow = "1.0.39"
serde_yaml = "0.8.17"
crossbeam = "0.8.0"
num_cpus = "1.13.0"

[features]
default = []
debug = []
